--- a/notes/frontend/src/components/NoteList.css
+++ b/notes/frontend/src/components/NoteList.css
@@ -1,7 +1,12 @@
+.notes-list {
+  /* background: red; */
+}
+
 .note {
   width: 100%;
   text-align: left;
-  padding: var(--padding-md) var(--padding-sm);
+  padding: var(--padding-sm) var(--padding-sm);
+  /* padding-top: 0; */
   cursor: pointer;
   border-bottom: 1px solid var(--neutral-300);
 }
