--- a/notes/frontend/src/components/Search.css
+++ b/notes/frontend/src/components/Search.css
@@ -1,6 +1,7 @@
 .search-form {
   width: 100%;
-  padding: 0 var(--padding-lg);
+  /* padding: 0 var(--padding-lg); */
+  padding: var(--padding-sm);
 }
 
 .search-input {
